--- a/shippable.yml
+++ b/shippable.yml
@@ -17,6 +17,9 @@ before_script:
 # Running the tests with grunt
 script:
   - grunt
+# Push it to GCR
+Push Build : Yes
+Push image to : gcr.io/jawaidekramprojectname/sample_node
 
 # Tell istanbul to generate a coverage report
 after_script:
